gccida/g0/get_attr_athlon_fpunits
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12028:1: error: must use 'enum' tag to refer to type 'attr_athlon_fpunits'
attr_athlon_fpunits  get_attr_athlon_fpunits( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12031:1: error: must use 'enum' tag to refer to type 'attr_athlon_fpunits'
attr_athlon_fpunits result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12041:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 11973, "get_attr_athlon_fpunits"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12041:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 11973, "get_attr_athlon_fpunits"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12088:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( register_operand( recog_data_0.operand[1], SImode) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12089:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| immediate_operand( recog_data_0.operand[1], VOIDmode)) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12114:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( register_operand( recog_data_0.operand[1], SImode) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12115:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| immediate_operand( recog_data_0.operand[1], VOIDmode)) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12146:29: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( register_operand( recog_data_0.operand[1], SImode) 
                            ^~~~~~~~~~~~
                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12147:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| immediate_operand( recog_data_0.operand[1], VOIDmode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12184:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( register_operand( recog_data_0.operand[1], SImode) || immediate_operand( recog_data_0.operand[1], VOIDmode)) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12184:79: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( register_operand( recog_data_0.operand[1], SImode) || immediate_operand( recog_data_0.operand[1], VOIDmode)) ) 
                                                                              ^~~~~~~~~~~~
                                                                              recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12213:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( register_operand( recog_data_0.operand[1], SImode) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12214:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| immediate_operand( recog_data_0.operand[1], VOIDmode)) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12271:21: error: use of undeclared identifier 'recog_data_0'
if ( mult_operator( recog_data_0.operand[3]) ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12279:42: error: use of undeclared identifier 'recog_data_0'
if ( which_alternative || mult_operator( recog_data_0.operand[3]) ) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12281:43: error: use of undeclared identifier 'recog_data_0'
if ( which_alternative || !mult_operator( recog_data_0.operand[3]) ) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12293:21: error: use of undeclared identifier 'recog_data_0'
if ( mult_operator( recog_data_0.operand[3]) ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/insn-attrtab.c:12300:21: error: use of undeclared identifier 'recog_data_0'
if ( mult_operator( recog_data_0.operand[3]) ) 
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_athlon_fpunits/src/obj/insn-attrtab.o] Error 1
